[package]
name = "scarlet"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
description = "Library for simple JavaScript frontend usage"
license = "BSD-3-Clause"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "console",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlDocument",
  "Window"
]

[profile.release]
lto = true
